# TrackGuideOnboard

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  LICENSE  README.md  main  output.rtcm  rtkrcv.conf.template
RTK_Connect/: CMakeLists.txt  RTK_Connect.cpp
pyproject/: pyproject.ino  secrets.h  zedf9p.cpp
src/: main.cpp
src/MaCORS/: MaCORS.cpp  MaCORS.h
src/boundarylogic/: boundarylogic.cpp  boundarylogic.h
src/inputoutput/: buttons.cpp  buttons.h  ledcontrol.cpp
src/ledcontrol/: ledcontrol.cpp  ledcontrol.h
src/rtkservice/: rtkservice.cpp  rtkservice.h  tcpserver.cpp  tcpserver.h
src/states/: states.h
